--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -419,6 +419,10 @@
       android:theme="@style/Tasks"/>
 
     <activity
+        android:name=".caldav.LocalAccountSettingsActivity"
+        android:theme="@style/Tasks" />
+
+    <activity
       android:name=".etebase.EtebaseAccountSettingsActivity"
       android:theme="@style/Tasks" />
 
