--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,6 +269,7 @@
         <data android:mimeType="text/plain" />
         <data android:mimeType="image/*" />
         <data android:mimeType="audio/*" />
+        <data android:mimeType="video/*"/>
         <data android:mimeType="application/*" />
       </intent-filter>
       <intent-filter>
