--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,7 +27,7 @@ google-services = "4.4.2"
 grpc = "1.73.0"
 hilt = "1.2.0"
 horologist = "0.6.23"
-ical4android = "12fe73a"
+ical4android = "240f756"
 jchronic = "0.2.6"
 jems = "1.33"
 junit-junit = "4.13.2"
@@ -101,7 +101,7 @@ androidx-work = { module = "androidx.work:work-runtime-ktx", version.ref = "work
 appauth = { module = "net.openid:appauth", version.ref = "appauth" }
 bitfire-cert4android = { module = "com.github.bitfireAT:cert4android", version.ref = "cert4android" }
 bitfire-dav4jvm = { module = "com.github.bitfireAT:dav4jvm", version.ref = "dav4jvm"}
-bitfire-ical4android = { module = "com.github.tasks:ical4android", version.ref = "ical4android"}
+bitfire-ical4android = { module = "com.github.bitfireAT:ical4android", version.ref = "ical4android"}
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
