--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,15 +28,12 @@ grpc = "1.73.0"
 hilt = "1.3.0"
 horologist = "0.7.15"
 ical4android = "fcb0311ca7"
-jchronic = "0.2.6"
-jems = "1.33"
 junit-junit = "4.13.2"
 junit = "1.3.0"
-kotlin = "2.1.21"
+kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
 ktor = "3.3.3"
 leakcanary = "2.14"
-lib-recur = "0.11.4"
 lifecycle = "2.10.0"
 locale = "1.0.4"
 make-it-easy = "4.0.1"
@@ -54,7 +51,6 @@ play-services-oss-licenses = "17.3.0"
 preference = "1.2.1"
 protobuf = "4.33.2"
 recyclerview = "1.4.0"
-rfc5545-datetime = "0.2.4"
 room = "2.8.4"
 shortcut-badger = "1.1.22"
 timber = "5.0.1"
@@ -113,10 +109,13 @@ dagger-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", 
 dagger-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "dagger-hilt" }
 dashclock-api = { module = "com.google.android.apps.dashclock:dashclock-api", version.ref = "dashclock-api" }
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
-dmfs-jems = { module = "org.dmfs:jems", version.ref = "jems" }
+#noinspection NewerVersionAvailable
+dmfs-jems = { module = "org.dmfs:jems", version = "1.33" }
 dmfs-opentasks-provider = { module = "com.github.tasks.opentasks:opentasks-provider", version.ref = "opentasks" }
-dmfs-recur = { module = "org.dmfs:lib-recur", version.ref = "lib-recur" }
-dmfs-rfc5545-datetime = { module = "org.dmfs:rfc5545-datetime", version.ref = "rfc5545-datetime" }
+#noinspection NewerVersionAvailable
+dmfs-recur = { module = "org.dmfs:lib-recur", version = "0.11.4" }
+#noinspection NewerVersionAvailable
+dmfs-rfc5545-datetime = { module = "org.dmfs:rfc5545-datetime", version = "0.2.4" }
 etebase = { module = "com.etebase:client", version.ref = "etebase" }
 firebase = { module = "com.google.firebase:firebase-bom", version.ref = "firebase" }
 firebase-config-ktx = { module = "com.google.firebase:firebase-config-ktx" }
@@ -135,7 +134,8 @@ horologist-datalayer-core = { group = "com.google.android.horologist", name = "h
 horologist-datalayer-grpc = { group = "com.google.android.horologist", name = "horologist-datalayer-grpc", version.ref = "horologist" }
 horologist-datalayer-phone = { group = "com.google.android.horologist", name = "horologist-datalayer-phone", version.ref = "horologist" }
 horologist-datalayer-watch = { group = "com.google.android.horologist", name = "horologist-datalayer-watch", version.ref = "horologist" }
-jchronic = { module = "com.rubiconproject.oss:jchronic", version.ref = "jchronic" }
+#noinspection NewerVersionAvailable
+jchronic = { module = "com.rubiconproject.oss:jchronic", version = "0.2.6" }
 junit = { module = "junit:junit", version.ref = "junit-junit" }
 kermit = { module = "co.touchlab:kermit", version = "2.0.8" }
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -209,8 +209,8 @@ kotlin-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-ksp = { id = "com.google.devtools.ksp", version = "2.1.21-2.0.1" }
+ksp = { id = "com.google.devtools.ksp", version = "2.2.20-2.0.3" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 protobuf = { id = "com.google.protobuf", version = "0.9.6" }
-redacted = { id = "dev.zacsweers.redacted", version = "1.13.0" }
+redacted = { id = "dev.zacsweers.redacted", version = "1.15.1" }
