--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -310,6 +310,10 @@
         android:name=".billing.PurchaseActivity"
         android:theme="@style/Tasks" />
 
+    <activity
+        android:name=".compose.accounts.AddAccountActivity"
+        android:theme="@style/Tasks" />
+
     <!-- ======================================================= Receivers = -->
 
     <!-- widgets -->
