Configure default reminders

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -229,6 +229,12 @@
         android:theme="@style/TranslucentDialog" />
 
     <activity
+        android:name=".compose.DefaultRemindersActivity"
+        android:excludeFromRecents="true"
+        android:taskAffinity=""
+        android:theme="@style/TranslucentDialog" />
+
+    <activity
       android:name=".activities.CameraActivity"
       android:theme="@style/TranslucentDialog"/>
 
