--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ locale = "1.0.4"
 make-it-easy = "4.0.1"
 markwon = "4.6.2"
 material = "1.12.0"
+material-kolor = "4.1.1"
 mockito = "5.21.0"
 okhttp = "5.3.2"
 opentasks = "562fec5"
@@ -160,6 +161,7 @@ markwon-strikethrough = { module = "io.noties.markwon:ext-strikethrough", versio
 markwon-tables = { module = "io.noties.markwon:ext-tables", version.ref = "markwon" }
 markwon-tasklist = { module = "io.noties.markwon:ext-tasklist", version.ref = "markwon" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
+material-kolor = { module = "com.materialkolor:material-kolor", version.ref = "material-kolor" }
 microsoft-authentication = { module = "com.microsoft.identity.client:msal", version = "7.0.3" }
 mockito-android = { module = "org.mockito:mockito-android", version.ref = "mockito" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
